--- a/ALMACEN/ALMACEN.WebAdmin/Views/Shared/_LayoutAdmin.cshtml
+++ b/ALMACEN/ALMACEN.WebAdmin/Views/Shared/_LayoutAdmin.cshtml
@@ -25,10 +25,10 @@
                 <div id="cm-menu-scroller">
                     <ul class="cm-menu-items">
                         <li class="active"><a href="/" class="sf-house">INICIO</a></li>
-                        <li class="active"><a href="/Servicios" class="sf-house">Servicios</a></li>
-                        <li class="active"><a href="/Categorias" class="sf-house">Categorias</a></li>
-                        <li class="active"><a href="/Clientes" class="sf-house">Clientes</a></li>
-                        <li class="active"><a href="/SolicitudAduana" class="sf-house">Solicitudes</a></li>
+                        <li class="active"><a href="/Servicios" class="sf-box-in">Servicios</a></li>
+                        <li class="active"><a href="/Categorias" class="sf-layers">Categorias</a></li>
+                        <li class="active"><a href="/Clientes" class="sf-profile-group">Clientes</a></li>
+                        <li class="active"><a href="/SolicitudAduana" class="sf-file-note">Solicitudes</a></li>
                     </ul>
                 </div>
             </div>
@@ -47,7 +47,7 @@
                 <button class="btn btn-primary md-account-circle-white" data-toggle="dropdown"></button>
                 <ul class="dropdown-menu">
                     <li>
-                        <a href="login.html"><i class="fa fa-fw fa-sign-out"></i> Salir</a>
+                        <a href="/login"><i class="fa fa-fw fa-sign-out"></i> Salir</a>
                     </li>
                 </ul>
             </div>
